tests/lean/hole_issue2.lean.expected.out
hole_issue2.lean:12:25: warning: declaration 'count' uses sorry
hole_issue2.lean:12:25: warning: declaration 'count.equations._eqn_1' uses sorry
hole_issue2.lean:22:74: error: don't know how to synthesize placeholder
context:
A : Type,
b₁ b₂ : bag A,
l₁ l₂ : list A,
_match : Π (b : bool), subcount l₁ l₂ = b → decidable (⟦l₁⟧ ⊆ ⟦l₂⟧),
H : subcount l₁ l₂ = ff,
h : ⟦l₁⟧ ⊆ ⟦l₂⟧,
w : A,
hw : ¬list.count w l₁ ≤ list.count w l₂
⊢ false
hole_issue2.lean:18:25: warning: declaration 'decidable_subbag_1' uses sorry
hole_issue2.lean:18:25: warning: declaration 'decidable_subbag_1.equations._eqn_1' uses sorry
hole_issue2.lean:22:74: error: elaborator failed
Additional information:
hole_issue2.lean:19:0: context: the inferred motive for the eliminator-like application is
  λ (_x _x_1 : bag A), decidable (_x ⊆ _x_1)
hole_issue2.lean:29:65: error: don't know how to synthesize placeholder
context:
A : Type,
b₁ b₂ : bag A,
l₁ l₂ : list A,
_match : Π (b : bool), subcount l₁ l₂ = b → decidable (⟦l₁⟧ ⊆ ⟦l₂⟧),
H : subcount l₁ l₂ = ff,
h : ⟦l₁⟧ ⊆ ⟦l₂⟧
⊢ ∀ (a : A), ¬list.count a l₁ ≤ list.count a l₂ → false
hole_issue2.lean:25:25: warning: declaration 'decidable_subbag_2' uses sorry
hole_issue2.lean:25:25: warning: declaration 'decidable_subbag_2.equations._eqn_1' uses sorry
hole_issue2.lean:29:65: error: elaborator failed
Additional information:
hole_issue2.lean:26:0: context: the inferred motive for the eliminator-like application is
  λ (_x _x_1 : bag A), decidable (_x ⊆ _x_1)
hole_issue2.lean:36:28: error: don't know how to synthesize placeholder
context:
A : Type,
b₁ b₂ : bag A,
l₁ l₂ : list A,
_match : Π (b : bool), subcount l₁ l₂ = b → decidable (⟦l₁⟧ ⊆ ⟦l₂⟧),
H : subcount l₁ l₂ = ff,
h : ⟦l₁⟧ ⊆ ⟦l₂⟧
⊢ false
hole_issue2.lean:32:25: warning: declaration 'decidable_subbag_3' uses sorry
hole_issue2.lean:32:25: warning: declaration 'decidable_subbag_3.equations._eqn_1' uses sorry
hole_issue2.lean:36:28: error: elaborator failed
Additional information:
hole_issue2.lean:33:0: context: the inferred motive for the eliminator-like application is
  λ (_x _x_1 : bag A), decidable (_x ⊆ _x_1)
